--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta http-equiv="refresh" content="65">
 <head>
   <title>Meatgeek</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
