--- a/app/views/readings/index.html.erb
+++ b/app/views/readings/index.html.erb
@@ -1,19 +1,15 @@
-<h1>Listing readings</h1>
+<h1><%= @readings.first.temperature %>&#176;</h1>
 
 <table>
   <tr>
     <th>Temperature</th>
-    <th></th>
-    <th></th>
     <th></th>
   </tr>
 
 <% @readings.each do |reading| %>
   <tr>
     <td><%= reading.temperature %></td>
-    <td><%= link_to 'Show', reading %></td>
-    <td><%= link_to 'Edit', edit_reading_path(reading) %></td>
-    <td><%= link_to 'Destroy', reading, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= time_ago_in_words(reading.created_at) %></td>
   </tr>
 <% end %>
 </table>
